--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -75,5 +75,6 @@
             </parameterPanel>
         </customType> 
     </customTypes>   
-<hasAdoc>true</hasAdoc>
+    <hasAdoc>true</hasAdoc>
+    <catalogLabel>Microsoft Azure</catalogLabel>
 </plugin>
