Checkpoint 1, PDK libs have been added

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ buildscript {
 }
 
 repositories {
+    maven {
+		url "http://artifactory.electric-cloud.com/artifactory/repo"
+	}
 	maven {
 		url "https://oss.sonatype.org/content/repositories/snapshots"
 	}
